<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HangmanActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/game0"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        />
    <TextView
        android:id="@+id/gameLostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lost"
        android:textColor="@color/red"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintVertical_bias="0.956"
        tools:visibility="visible"
        />

    <TextView
        android:id="@+id/gameWinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win"
        android:textColor="@color/green"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintVertical_bias="0.956"
        tools:visibility="visible"
        />

    <TextView
        android:id="@+id/wordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:letterSpacing="0.3"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:text="____ABCD____"
        />

    <TextView

        android:id="@+id/lettersUsedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/wordTextView"
        tools:text="Used Letters: A, B, C, D, E, F, G..."
        />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/green"
        android:text="@string/start_new_game"
        android:textSize="26sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lettersUsedTextView"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lettersLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lettersUsedTextView"
        >
        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:padding="16dp"
            app:constraint_referenced_ids="a,b,c,d,e,f,g,h,i,j,k,l,m,n,o,p,q,r,s,t,u,v,w,x,y,z"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

        </androidx.constraintlayout.helper.widget.Flow>
        <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_a"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_b"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_c"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_d"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_e"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_f"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_g"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_h"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_i"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/j"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_j"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_k"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_l"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_m"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_n"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_o"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_p"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_q"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_r"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_s"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_t"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/u"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_u"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_v"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_w"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_x"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_y"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:padding="10dp"
            android:text="@string/display_z"
            android:textColor="@color/white"
            android:textSize="24sp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>